fixed: white space bounce after scrolling to top

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+html {
+  overflow: hidden;
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,6 +11,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
+  overflow: auto;
+  height: 100%;
 }
 
 code {
